<resources>
    <string name="app_name">Blab</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="sign_up">Sign-up</string>
    <string name="sign_in">Sign-in</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="logo">Logo</string>
    <string name="number">Phone Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="submitButton">Submit</string>
    <string name="title_activity_work">WorkActivity</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_download">Downloads</string>
    <string name="title_add">Add</string>
    <string name="name">Name</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="avatar">avatar</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="follows">Follows</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
